--- a/index.html
+++ b/index.html
@@ -8,7 +8,18 @@
     <title>Document</title>
 </head>
 <body>
-    <canvas id="jsCanvas" class="canvas"></canvas>
+<canvas id="jsCanvas" class="canvas"></canvas>
+<div class="controls">
+    <div class="controls__range">
+        <input type="range" id="jsRange" min="0.1" max="5.0" value="2.5" step="0.1"/>
+        <!-- min가장 작은 값 max최대 value기본값 step 한단계씩 올라가는 수치? -->
+    </div>
+    <div class="controls__btns">
+        <button id="jsMode">Fill</button>
+        <button id="jsSave">Save</button>
+    </div>
+
+
     <div class="controls__colors" id="jsColors">
         <div class="controls__color" style="background-color: #2c2c2c;"></div>
         <div class="controls__color" style="background-color: white;"></div>
@@ -20,8 +31,7 @@
         <div class="controls__color" style="background-color: #0579ff;"></div>
         <div class="controls__color" style="background-color: #5856d6;"></div>
     </div>
-
-
+</div>
     <script src="app.js" />
 </body>
 </html>
